--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-
+# Bare for å få en build
 name: CI
 
 # Controls when the workflow will run
@@ -25,32 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run a simple script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-      - name: Setup .NET Core SDK
-        uses: actions/setup-dotnet@v4.3.0
-        with:
-          # Optional SDK version(s) to use. If not provided, will install global.json version when available. Examples: 2.2.104, 3.1, 3.1.x, 3.x, 6.0.2xx
-          dotnet-version: # optional
-          # Optional quality of the build. The possible values are: daily, signed, validated, preview, ga.
-          dotnet-quality: # optional
-          # Optional global.json location, if your global.json isn't located in the root of the repo.
-          global-json-file: # optional
-          # Optional package source for which to set up authentication. Will consult any existing NuGet.config in the root of the repo and provide a temporary NuGet.config using the NUGET_AUTH_TOKEN environment variable as a ClearTextPassword
-          source-url: # optional
-          # Optional OWNER for using packages from GitHub Package Registry organizations/users other than the current repository's owner. Only used if a GPR URL is also provided in source-url
-          owner: # optional
-          # Optional NuGet.config location, if your NuGet.config isn't located in the root of the repo.
-          config-file: # optional
-          # Optional input to enable caching of the NuGet global-packages folder
-          cache: # optional
-          # Used to specify the path to a dependency file: packages.lock.json. Supports wildcards or a list of file names for caching multiple dependencies.
-          cache-dependency-path: # optional
-                  
+          echo "Running a simple script"
+          echo "Current date and time: $(date)"
+          echo "List of files in the repository:"
+          ls -la
