--- a/.github/workflows/azure-login.yml
+++ b/.github/workflows/azure-login.yml
@@ -16,6 +16,7 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        federated-credential-subject: repo:kaifriis/azure-skolen:environment:TEST
 
     - name: Test Azure Connection
       run: |
