--- a/.github/workflows/azure-login.yml
+++ b/.github/workflows/azure-login.yml
@@ -3,6 +3,13 @@ name: Azure Login
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
+env:
+  ENVIRONMENT: TEST
+
 jobs:
   login:
     runs-on: ubuntu-latest
@@ -16,8 +23,8 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        federated-credential-subject: repo:kaifriis/azure-skolen:environment:TEST
 
     - name: Test Azure Connection
       run: |
+        echo "Running in environment: ${{ env.ENVIRONMENT }}"
         az account show
