--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,21 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v2
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+
+    - name: Install npm packages
+      working-directory: ./AzureWorkshopApp
+      run: npm install
 
     - name: Restore dependencies
       run: dotnet restore
