--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,11 +14,7 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
 
-  login:
-    uses: ./.github/workflows/azure-login.yml
-    secrets: inherit
-
   deploy:
     uses: ./.github/workflows/deploy.yml
     secrets: inherit
-    needs: [build, login]
+    needs: [build]
