--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,11 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
 
+  test:
+    uses: ./.github/workflows/test.yml
+    needs: [build]
+
   deploy:
     uses: ./.github/workflows/deploy.yml
     secrets: inherit
-    needs: [build]
+    needs: [build, test]
