--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Run Tests
 
 on:
   workflow_call:  
-  
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -19,5 +19,18 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
 
-    - name: Run tests
-      run: dotnet test AzureWorkshopAppTests/AzureWorkshopAppTests.csproj --configuration Release --no-restore --verbosity normal
+    - name: Run tests with detailed logging
+      run: |
+        dotnet test AzureWorkshopAppTests/AzureWorkshopAppTests.csproj \
+          --configuration Release \
+          --no-restore \
+          --verbosity detailed \
+          --logger "console;verbosity=detailed" \
+          --logger "trx;LogFileName=test-results.trx"
+
+    - name: Upload test results
+      if: always()  # Run this step even if tests fail
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results
+        path: TestResults/test-results.trx
