--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,5 +1,9 @@
 name: CI/CD Pipeline
 
+permissions:
+  id-token: write
+  contents: read
+
 on:
   push:
     branches:
@@ -10,11 +14,11 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
 
-  login:
-    uses: ./.github/workflows/azure-login.yml
-    secrets: inherit
+  test:
+    uses: ./.github/workflows/test.yml
+    needs: [build]
 
   deploy:
     uses: ./.github/workflows/deploy.yml
     secrets: inherit
-    needs: [build, login]
+    needs: [build, test]
