--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,6 +22,6 @@ jobs:
     needs: [build]
 
   deploy:
-    uses: ./.github/workflows/deploy.yml
+    uses: ./.github/workflows/deploy-azure.yml
     secrets: inherit
     needs: [build, test]
