--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,5 +23,7 @@ jobs:
 
   deploy:
     uses: ./.github/workflows/deploy-azure.yml
+    with:
+      releaseType: 'test'  # input parameter
     secrets: inherit
     needs: [build, test]
