--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -10,15 +10,12 @@ on:
         description: 'Where to release (test or prod)?'
         type: string
         required: true
-        default: 'test'
+        default: 'TEST'
 
 jobs:
-  test:
-    name: Deploy to Staging
-    environment: 
-      name: test
-      url: https://mona-dotnetweb-staging.azurewebsites.net/
-
+  deploy:
+    name: Deploy to ${{ inputs.releaseType }}
+    environment: ${{ inputs.releaseType }}
 
     runs-on: ubuntu-latest
     
@@ -41,35 +38,4 @@ jobs:
         with:
           app-name: ${{ vars.AZURE_WEBAPP_NAME }}
           package: ./publish
-          slot-name: 'test'
-
-  production:
-    name: Deploy to production
-    needs: [test]
-    environment: 
-      name: production
-      url: https://mona-dotnetweb-prod.azurewebsites.net/
-
-
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: dotnet-app
-          path: ./publish
-
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: ${{ vars.AZURE_WEBAPP_NAME }}
-          package: ./publish
-          slot-name: 'production'
+          slot-name: ${{ inputs.releaseType }}
