--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,6 +24,6 @@ jobs:
   deploy:
     uses: ./.github/workflows/deploy-azure.yml
     with:
-      releaseType: 'test'  # input parameter
+      releaseType: 'TEST'  # input parameter
     secrets: inherit
     needs: [build, test]
