--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -1,9 +1,9 @@
 name: Deploy to Azure
 
 on:
-  push:
-    tags:
-      - 'azureskl'  # This triggers on tag push only
+  release:
+    types: [published]
+  workflow_dispatch: 
   workflow_call:
     inputs:
       releaseType:
@@ -15,6 +15,8 @@ on:
 jobs:
   deploy:
     name: Deploy to ${{ inputs.releaseType }}
+    environment: ${{ inputs.releaseType }}
+
     runs-on: ubuntu-latest
     
     steps:
