--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -38,4 +38,4 @@ jobs:
         with:
           app-name: ${{ vars.AZURE_WEBAPP_NAME }}
           package: ./publish
-          slot-name: ${{ inputs.releaseType }}
+          # slot-name: ${{ inputs.releaseType }}
