--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -1,18 +1,27 @@
 name: Deploy to Azure
 
 on:
+  release:
+    types: [published]
   workflow_dispatch: 
   workflow_call:
+    inputs:
+      releaseType:
+        description: 'Where to release (test or prod)?'
+        type: string
+        required: true
+        default: 'TEST'
 
 jobs:
   deploy:
+    name: Deploy to ${{ inputs.releaseType }}
+    environment: ${{ inputs.releaseType }}
+
     runs-on: ubuntu-latest
-    environment: TEST
     
     steps:
-      # Azure login step - need auth context
       - name: Azure Login
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
@@ -29,4 +38,4 @@ jobs:
         with:
           app-name: ${{ vars.AZURE_WEBAPP_NAME }}
           package: ./publish
-          slot-name: 'production'
+          # slot-name: ${{ inputs.releaseType }}
