--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,12 +5,12 @@ permissions:
   contents: read
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
+#  pull_request:
+#    branches:
+#      - main
   workflow_dispatch:
 
 jobs:
