--- a/.github/workflows/iac-test-validate.yml
+++ b/.github/workflows/iac-test-validate.yml
@@ -43,10 +43,11 @@ jobs:
           id: deploy
           uses: Azure/arm-deploy@v1
           with:
-            scope: resourcegroup
-            resourceGroupName: ${{ env.RESOURCE_GROUP_NAME }}
+            scope: subscription
+            location: ${{ env.AZURE_LOCATION }}
             template: ./bicep/main.bicep
             parameters: 
               environmentName=${{ env.ENVIRONMENT_NAME }}
               location=${{ env.AZURE_LOCATION }}
+              resourceGroupName='rg-azskolen-test'
             failOnStdErr: false
