--- a/.github/workflows/iac-test-validate.yml
+++ b/.github/workflows/iac-test-validate.yml
@@ -7,7 +7,7 @@ permissions:
 env:
   ENVIRONMENT_NAME: 'TEST'
   AZURE_LOCATION: 'norwayeast'
-  RESOURCE_GROUP_NAME: 'rg-azskolen-test'
+  RESOURCE_GROUP_NAME: ''
 
 on:
   push:
@@ -43,11 +43,10 @@ jobs:
           id: deploy
           uses: Azure/arm-deploy@v1
           with:
-            scope: subscription
-            location: ${{ env.AZURE_LOCATION }}
+            scope: resourcegroup
+            resourceGroupName: ${{ env.RESOURCE_GROUP_NAME }}
             template: ./bicep/main.bicep
             parameters: 
               environmentName=${{ env.ENVIRONMENT_NAME }}
               location=${{ env.AZURE_LOCATION }}
-              resourceGroupName='rg-azskolen-test'
             failOnStdErr: false
