--- a/.github/workflows/iac-test-validate.yml
+++ b/.github/workflows/iac-test-validate.yml
@@ -45,12 +45,23 @@ jobs:
           with:
             inlineScript: |
               az deployment group validate \
+                --name validate-${{ github.run_id }} \
                 --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
                 --template-file ./bicep/main.bicep \
                 --parameters environmentName=${{ env.ENVIRONMENT_NAME }} \
-                location=${{ env.AZURE_LOCATION }} \
+                --location=${{ env.AZURE_LOCATION }} \
                 --mode Incremental
-                    
+        
+        - name: "What if"
+          uses: Azure/cli@v1
+          with:
+            inlineScript: |
+              az deployment group what-if \
+                --name what-if-${{ github.run_id }} \
+                --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
+                --template-file ./bicep/main.bicep \
+                --parameters environmentName=${{ env.ENVIRONMENT_NAME }} \
+                --location=${{ env.AZURE_LOCATION }} > whatif.json   
 
 
         - name: Deploy Bicep
