--- a/.github/workflows/iac-test-validate.yml
+++ b/.github/workflows/iac-test-validate.yml
@@ -47,10 +47,7 @@ jobs:
               az deployment group validate \
                 --name validate-${{ github.run_id }} \
                 --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
-                --template-file ./bicep/main.bicep \
-                --parameters environmentName=${{ env.ENVIRONMENT_NAME }} \
-                --location=${{ env.AZURE_LOCATION }} \
-                --mode Incremental
+                --template-file ./bicep/main.bicep 
         
         - name: "What if"
           uses: Azure/cli@v1
@@ -60,8 +57,7 @@ jobs:
                 --name what-if-${{ github.run_id }} \
                 --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
                 --template-file ./bicep/main.bicep \
-                --parameters environmentName=${{ env.ENVIRONMENT_NAME }} \
-                --location=${{ env.AZURE_LOCATION }} > whatif.json   
+                --parameters environmentName=${{ env.ENVIRONMENT_NAME }} > whatif.json   
 
 
         - name: Deploy Bicep
