--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,15 +5,22 @@ permissions:
   contents: read
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
+#  pull_request:
+#    branches:
+#      - main
   workflow_dispatch:
 
 jobs:
+  validate-infrastructure:
+    uses: ./.github/workflows/iac-test-validate.yml
+    with:
+      environment: 'dev'
+      location: 'norwayeast'
+    secrets: inherit
+
   build:
     uses: ./.github/workflows/build.yml
 
@@ -33,4 +40,4 @@ jobs:
       with:
         releaseType: 'production'
       secrets: inherit
-      needs: [deploy-test] 
+      needs: [deploy-test]
