--- a/.github/workflows/iac-test-validate.yml
+++ b/.github/workflows/iac-test-validate.yml
@@ -11,12 +11,12 @@ env:
   RESOURCE_GROUP_NAME: 'rg-azskolen-test'
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
+  # pull_request:
+  #   branches:
+  #     - main
   workflow_dispatch:
 
 jobs:
