skrudd av whatif

--- a/.github/workflows/bicep-test-validate.yml
+++ b/.github/workflows/bicep-test-validate.yml
@@ -19,7 +19,7 @@ on:
   workflow_dispatch:
 
 jobs:
-    validate:
+    validate-bicep:
       runs-on: ubuntu-latest
       steps:
         - name: Checkout
