--- a/.github/workflows/bicep-test-validate.yml
+++ b/.github/workflows/bicep-test-validate.yml
@@ -56,6 +56,16 @@ jobs:
                 --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
                 --template-file ./bicep/main.bicep 
         
+        - name: What-If Deployment
+          uses: azure/arm-deploy@v1
+          with:
+            scope: resourcegroup
+            resourceGroupName: ${{ env.RESOURCE_GROUP_NAME }}
+            template: ./bicep/main.bicep
+            parameters: environmentName=${{ env.ENVIRONMENT_NAME }} location=${{ env.AZURE_LOCATION }}
+            deploymentMode: Validate
+            additionalArguments: --what-if
+                
         - name: Deploy Bicep
           if: success()
           id: deploy
