--- a/.github/workflows/Application/build-deploy-app.yml
+++ b/.github/workflows/Application/build-deploy-app.yml
@@ -32,11 +32,11 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
 
-    - name: Publish
-      run: dotnet publish ./AzureWorkshopApp/AzureWorkshopApp.csproj --configuration Release --output ./publish --no-build
+    # - name: Publish
+    #   run: dotnet publish ./AzureWorkshopApp/AzureWorkshopApp.csproj --configuration Release --output ./publish --no-build
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: dotnet-app
-        path: ./publish
+    # - name: Upload artifact
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: dotnet-app
+    #     path: ./publish
