--- a/.github/workflows/infrastructure/bicep-validate.yml
+++ b/.github/workflows/infrastructure/bicep-validate.yml
@@ -17,9 +17,11 @@ on:
     branches:
       - main
   workflow_dispatch:
+  workflow_call:
 
 jobs:
-    validate:
+    validate-bicep:
+      name: Validate Bicep
       runs-on: ubuntu-latest
       steps:
         - name: Checkout
@@ -54,8 +56,18 @@ jobs:
                 --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
                 --template-file ./bicep/main.bicep 
         
+        - name: What-If Deployment
+          uses: azure/arm-deploy@v1
+          with:
+            scope: resourcegroup
+            resourceGroupName: ${{ env.RESOURCE_GROUP_NAME }}
+            template: ./bicep/main.bicep
+            parameters: environmentName=${{ env.ENVIRONMENT_NAME }} location=${{ env.AZURE_LOCATION }}
+            deploymentMode: Validate
+            additionalArguments: --what-if
+                
         - name: Deploy Bicep
-          if: success()
+          if: github.event_name == 'push' && github.ref == 'refs/heads/main'
           id: deploy
           uses: Azure/arm-deploy@v1
           with:
