--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -35,7 +35,7 @@ jobs:
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          scope: 'Resource Group'
+          scope: 'resourcegroup'
           resourceGroupName: ${{ secrets.RESOURCE_GROUP_NAME }}
           template: ./bicep/main.bicep
           parameters: ./bicep/parameters.json
