--- a/.github/workflows/Application/deploy-azure.yml
+++ b/.github/workflows/Application/deploy-azure.yml
@@ -10,7 +10,12 @@ on:
         description: 'Where to release (test or prod)?'
         type: string
         required: true
-        default: 'TEST'
+        default: 'test'
+      webapp_secret_name:
+        description: 'Name of the secret containing webapp name'
+        type: string
+        required: true
+        default: 'TEST_WEBAPP_NAME'
 
 jobs:
   deploy:
@@ -20,22 +25,50 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Cache NuGet packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
+
+      - name: Build and Test
+        working-directory: ./AzureWorkshopApp
+        run: |
+          dotnet restore
+          npm install dropzone @types/dropzone
+          dotnet build --configuration Release --no-restore
+          dotnet test ../AzureWorkshopAppTests/AzureWorkshopAppTests.csproj --no-restore --verbosity normal
+        
+      - name: Publish
+        working-directory: ./AzureWorkshopApp
+        run: |
+          dotnet publish --configuration Release --no-build --output ${{ github.workspace }}/publish
+      
       - name: Azure Login
-        uses: azure/login@v2
+        uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: dotnet-app
-          path: ./publish
-
-      - name: Deploy to Azure Web App
+      - name: Deploy Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ vars.AZURE_WEBAPP_NAME }}
-          package: ./publish
-          # slot-name: ${{ inputs.releaseType }}
+          app-name: ${{ secrets[inputs.webapp_secret_name] }}
+          package: ${{ github.workspace }}/publish
+            
+      - name: Health Check
+        run: |
+          RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" https://${{ secrets[inputs.webapp_secret_name] }}.azurewebsites.net/health)
+          if [ "$RESPONSE" != "200" ]; then
+            echo "Health check failed with status $RESPONSE"
+            exit 1
