--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -17,55 +17,17 @@ permissions:
   contents: read
 
 jobs:
-  deploy-application:
-    runs-on: ubuntu-latest
-    environment: production
+  deploy-test:
+    uses: ./.github/workflows/application/deploy-azure.yml
+    with:
+      releaseType: 'test'
+      webapp_secret_name: 'TEST_WEBAPP_NAME'
+    secrets: inherit
 
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.0.x'
-
-      - name: Cache NuGet packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-nuget-
-
-      - name: Build and Test
-        working-directory: ./AzureWorkshopApp
-        run: |
-          dotnet restore
-          dotnet build --configuration Release --no-restore
-          dotnet test ../AzureWorkshopAppTests/AzureWorkshopAppTests.csproj --no-restore --verbosity normal
-        
-      - name: Publish
-        working-directory: ./AzureWorkshopApp
-        run: |
-          dotnet publish --configuration Release --no-build --output ${{ github.workspace }}/publish
-      
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      
-      - name: Deploy Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: ${{ secrets.WEBAPP_NAME }}
-          package: ${{ github.workspace }}/publish
-          
-      - name: Health Check
-        run: |
-          RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" https://${{ secrets.WEBAPP_NAME }}.azurewebsites.net/health)
-          if [ "$RESPONSE" != "200" ]; then
-            echo "Health check failed with status $RESPONSE"
-            exit 1
-          fi
+  deploy-production:
+    needs: deploy-test
+    uses: ./.github/workflows/application/deploy-azure.yml
+    with:
+      releaseType: 'production'
+      webapp_secret_name: 'WEBAPP_NAME'
+    secrets: inherit
