--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -17,11 +17,14 @@ on:
         required: true
         default: 'TEST_WEBAPP_NAME'
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy:
     name: Deploy to ${{ inputs.releaseType }}
     environment: ${{ inputs.releaseType }}
-
     runs-on: ubuntu-latest
     
     steps:
@@ -59,6 +62,7 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          enable-AzPSSession: true
 
       - name: Deploy Web App
         uses: azure/webapps-deploy@v2
