--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - '.github/workflows/application.yml'
+      - '.github/workflows/deploy-azure.yml'
       - 'AzureWorkshop/**'
       - 'AzureWorkshopTest/**'
   pull_request:
@@ -14,13 +15,13 @@ on:
       - 'AzureWorkshop/**'
       - 'AzureWorkshopTest/**'
   workflow_dispatch:
+permissions:
+  contents: read
+  id-token: write
+  actions: read
 
 jobs:
   deploy-test:
-    permissions:
-      contents: read
-      id-token: write
-      actions: read
     uses: ./.github/workflows/deploy-azure.yml
     with:
       releaseType: 'test'
@@ -28,10 +29,6 @@ jobs:
     secrets: inherit
 
   deploy-production:
-    permissions:
-      contents: read
-      id-token: write
-      actions: read
     needs: deploy-test
     uses: ./.github/workflows/deploy-azure.yml
     with:
