--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -25,13 +25,12 @@ jobs:
     uses: ./.github/workflows/deploy-azure.yml
     with:
       releaseType: 'test'
-      webapp_secret_name: 'TEST_WEBAPP_NAME'
+      webapp_var_name: ${{ vars.AZURE_WEBAPP_NAME }}
     secrets: inherit
-
   deploy-production:
     needs: deploy-test
     uses: ./.github/workflows/deploy-azure.yml
     with:
       releaseType: 'production'
-      webapp_secret_name: 'WEBAPP_NAME'
+      webapp_var_name: ${{ vars.AZURE_WEBAPP_NAME }}
     secrets: inherit
