Add debug step to print webapp_var_name in Azure deployment workflow

--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -43,6 +43,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nuget-
 
+      - name: Print webapp_var_name
+        run: echo "webapp_var_name = ${{ inputs.webapp_var_name }}"
+
       - name: Build and Test
         working-directory: ./AzureWorkshopApp
         run: |
