Fix variable syntax in Azure deployment workflows and add debug step for context printing

--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -25,12 +25,12 @@ jobs:
     uses: ./.github/workflows/deploy-azure.yml
     with:
       releaseType: 'test'
-      webapp_var_name: '${{ vars.AZURE_WEBAPP_NAME }}'
+      webapp_var_name: ${{ vars.AZURE_WEBAPP_NAME }}
     secrets: inherit
   deploy-production:
     needs: deploy-test
     uses: ./.github/workflows/deploy-azure.yml
     with:
       releaseType: 'production'
-      webapp_var_name: '${{ vars.AZURE_WEBAPP_NAME }}'
+      webapp_var_name: ${{ vars.AZURE_WEBAPP_NAME }}
     secrets: inherit
