--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -1,11 +1,6 @@
 name: Infrastructure Deployment
 
 on:
-  pull_request:
-    branches: [ main ]
-    paths:
-      - 'bicep/**'
-      - '.github/workflows/infrastructure.yml'
   push:
     branches: [ main ]
     paths:
@@ -14,28 +9,25 @@ on:
   workflow_dispatch:
 
 permissions:
-  id-token: write
   contents: read
+  id-token: write
+  actions: read
 
 jobs:
-  deploy-infrastructure:
-    runs-on: ubuntu-latest
-    environment: production
-    steps:
-      - uses: actions/checkout@v3
-      
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      
-      - name: Deploy Bicep
-        uses: azure/arm-deploy@v1
-        with:
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          scope: 'resourcegroup'
-          resourceGroupName: ${{ secrets.RESOURCE_GROUP_NAME }}
-          template: ./bicep/main.bicep
-          parameters: ./bicep/parameters.json
+  deploy-test-infra:
+    name: Deploy Test Infrastructure
+    uses: ./.github/workflows/infrastructure/deploy-azure.yml
+    with:
+      releaseType: 'test'
+      webapp_var_name: 'app-azskolen-test'
+    secrets: inherit
+
+  deploy-prod-infra:
+    name: Deploy Production Infrastructure
+    needs: deploy-test-infra
+    uses: ./.github/workflows/infrastructure/deploy-azure.yml
+    with:
+      releaseType: 'production'
+      webapp_var_name: 'app-azskolen-prod'
+    secrets: inherit
+
