--- a/.github/workflows/infrastructure/bicep-validate.yml
+++ b/.github/workflows/infrastructure/bicep-validate.yml
@@ -48,7 +48,9 @@ jobs:
               az deployment group validate \
                 --name validate-${{ github.run_id }} \
                 --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
-                --template-file ./bicep/main.bicep 
+                --template-file ./bicep/main.bicep \
+                --parameters environmentName=${{ env.ENVIRONMENT_NAME }} location=${{ env.AZURE_LOCATION }}
+
         
         - name: What-If Deployment
           uses: azure/arm-deploy@v1
