--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -64,7 +64,7 @@ jobs:
             scope: resourcegroup
             resourceGroupName: ${{ env.RESOURCE_GROUP }}
             template: ./bicep/main.bicep
-            parameters: environmentName=${{ env.ENVIRONMENT_NAME }} location=${{ env.AZURE_LOCATION }}
+            parameters: environment=${{ env.ENVIRONMENT_NAME }} location=${{ env.AZURE_LOCATION }}
             deploymentMode: Validate
             additionalArguments: --what-if
                 
@@ -77,6 +77,6 @@ jobs:
             resourceGroupName: ${{ env.RESOURCE_GROUP }}
             template: ./bicep/main.bicep
             parameters: 
-              environmentName=${{ env.ENVIRONMENT_NAME }}
+              environment=${{ env.ENVIRONMENT_NAME }}
               location=${{ env.AZURE_LOCATION }}
             failOnStdErr: false
